Added password reset functionality.
